src/test/ui/const-generics/different_byref.min.stderr
error: using `[usize; 1]` as const generic parameters is forbidden
  --> $DIR/different_byref.rs:8:23
   |
LL | struct Const<const V: [usize; 1]> {}
   |                       ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to previous error

